--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
-<html lang=""
-  ><head
-    ><meta charset="utf-8" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta
-      name="viewport"
-      content="width=device-width,initial-scale=1" /><link rel="icon" href="./favicon.ico" /><title
-      >weather-widget2</title
-    ><link href="./css/app.e69be6cf.css" rel="preload" as="style" /><link
-      href="./js/app.6d6a1cdd.js"
-      rel="preload"
-      as="script" /><link href="./js/chunk-vendors.3ef5530b.js" rel="preload" as="script" /><link
-      href="./css/app.e69be6cf.css"
-      rel="stylesheet" /></head
-  ><body
+<html lang="">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="icon" href="./favicon.ico" />
+    <title>weather-widget2</title>
+    <link href="./css/app.e69be6cf.css" rel="preload" as="style" />
+    <link href="./js/app.6d6a1cdd.js" rel="preload" as="script" />
+    <link href="./js/chunk-vendors.3ef5530b.js" rel="preload" as="script" />
+    <link href="./css/app.e69be6cf.css" rel="stylesheet" />
+  </head>
+
+  <body
     ><noscript
       ><strong
         >We're sorry but weather-widget2 doesn't work properly without JavaScript enabled. Please enable it to
         continue.</strong
       ></noscript
-    ><div id="app"></div
-    ><script src="./js/chunk-vendors.3ef5530b.js"></script
-    ><script src="./js/app.6d6a1cdd.js"></script></body
-></html>
+    >
+    <div id="app"></div>
+    <script src="./js/chunk-vendors.3ef5530b.js"></script>
+    <script src="./js/app.6d6a1cdd.js"></script>
+  </body>
+</html>
