feat: text succesfull

--- a/index0.html
+++ b/index0.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <h1 id='h'>hello</h1>
-    <weather-widget></weather-widget>
+    <weather-widget id="app"></weather-widget>
   </body>
 </html>
