--- a/index0.html
+++ b/index0.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./weather-widget.js" async></script>
+    <script src="https://aykuli.github.io/weather-widget-vue2/weather-widget.js" async></script>
 
     <title>Document</title>
   </head>
